--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-portfolio",
+  "name": "portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,13 +10,20 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.5",
-    "tailwindcss": "^4.1.5",
-    "vue": "^3.5.13"
+    "vue": "^3.4.38",
+    "vue-router": "^4.2.5",
+    "vue3-smooth-scroll": "^0.8.1",
+    "@vueuse/core": "^10.7.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/vue-fontawesome": "^3.0.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.2",
-    "gh-pages": "^6.3.0",
-    "vite": "^6.3.1"
+    "@vitejs/plugin-vue": "^5.1.3",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "vite": "^5.4.2"
   }
 }
