--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "vue": "^3.4.38",
-    "vue-router": "^4.2.5",
-    "vue3-smooth-scroll": "^0.8.1",
-    "@vueuse/core": "^10.7.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/vue-fontawesome": "^3.0.5"
+    "@fortawesome/vue-fontawesome": "^3.0.5",
+    "@vueuse/core": "^10.7.0",
+    "vue": "^3.4.38",
+    "vue-router": "^4.2.5",
+    "vue3-smooth-scroll": "^0.8.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.3",
     "autoprefixer": "^10.4.16",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "vite": "^5.4.2"
