--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.5",
     "vue": "^3.5.13",
+    "vue-i18n": "^11.1.3",
     "vue-router": "^4.5.1",
     "vue3-smooth-scroll": "^0.8.1"
   },
